--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sportbuddy",
   "version": "1.0.0",
-  "author": "MeetMeFit Team",
-  "homepage": "https://meetmefit.app/",
+  "author": "Marko Jevtic",
+  "homepage": "https://sportbuddy.app/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
